# factorio-resource-planner

./: README.md  pyproject.toml
factorio_resource_planner/machines/: assembly_machine_1.json  assembly_machine_2.json  assembly_machine_3.json
factorio_resource_planner/model/: __init__.py  part.py  recipe.py  util.py
factorio_resource_planner/parts/: iron_gear_wheel.json  iron_plate.json  yellow-belt.json
factorio_resource_planner/recipes/: iron_gear_wheel.json  yellow_belt.json
